Fix pages links to each other

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -35,21 +35,21 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav gap-3">
                             <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" href="/index.html">Accueil
+                                <a class="btn btn-outline-primary" href="./index.html">Accueil
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-outline-primary" aria-current="page"
-                                    href="/presentation.html">Présentation</a>
+                                    href="./presentation.html">Présentation</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/renovations.html">Rénovations</a>
+                                <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/services.html">Services</a>
+                                <a class="btn btn-outline-primary" href="./services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" href="/contact.html">Contact</a>
+                                <a class="btn btn-primary" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
