--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav gap-3">
                             <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" aria-current="page" href="#">Accueil
+                                <a class="btn btn-outline-primary" aria-current="page" href="index.html">Accueil
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/presentation.html">Présentation</a>
+                                <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/renovations.html">Rénovations</a>
+                                <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/services.html">Services</a>
+                                <a class="btn btn-outline-primary" href="./services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" href="/contact.html">Contact</a>
+                                <a class="btn btn-primary" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
