--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,16 +39,16 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/presentation.html">Présentation</a>
+                                <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/renovations.html">Rénovations</a>
+                                <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/services.html">Services</a>
+                                <a class="btn btn-outline-primary" href="./services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" aria-current="page" href="/contact.html">Contact</a>
+                                <a class="btn btn-primary" aria-current="page" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
