--- a/pages/services.html
+++ b/pages/services.html
@@ -35,18 +35,18 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav gap-3">
                             <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" aria-current="page" href="/index.html">Accueil
+                                <a class="btn btn-outline-primary" aria-current="page" href="./index.html">Accueil
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/presentation.html">Présentation</a>
+                                <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="/renovations.html">Rénovations</a>
+                                <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-outline-primary" aria-current="page"
-                                    href="/services.html">Services</a>
+                                    href="./services.html">Services</a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-primary" href="/contact.html">Contact</a>
