--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./node_modules/bootstrap/scss/bootstrap.scss">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- AOS animation -->
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav gap-3">
                             <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" aria-current="page" href="/index.html">Accueil
+                                <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
                                 </a>
                             </li>
                             <li class="nav-item">
