--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
+                                <a class="btn btn-outline-primary" href="./pages/presentation.html">Présentation</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
+                                <a class="btn btn-outline-primary" href="./pages/renovations.html">Rénovations</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./services.html">Services</a>
+                                <a class="btn btn-outline-primary" href="./pages/services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" href="./contact.html">Contact</a>
+                                <a class="btn btn-primary" href="./pages/contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
