Upload project with all files working. Form isn't submitting

--- a/index.html
+++ b/index.html
@@ -19,81 +19,79 @@
     <title>A2F </title>
 </head>
 
-<body>
-    <main class="container-fluid bg-dark bg-gradient text-primary">
-        <!-- Navbar -->
-        <div class="container-fluid header py-2 px-5" data-aos="fade-down">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid py-3 px-5 mx-2 gap-4 justify-content-center">
-                    <h1 class="fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
-                    <h4>Rénovations Carrelage Maçonnerie Electricité</h4>
-                    <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav gap-3">
-                            <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" aria-current="page" href="index.html">Accueil
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./pages/presentation.html">Présentation</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./pages/renovations.html">Rénovations</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./pages/services.html">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-primary" href="./pages/contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+<body class="container bg-dark bg-gradient text-primary">
+    <!-- Navbar -->
+    <div class="container header mt-2">
+        <nav class=" navbar navbar-expand-lg">
+            <div class="container gap-3">
+                <h1 class=" fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
+                <h4>Maçonnerie Carrelage Electricité</h4>
+                <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav gap-3">
+                        <li class="nav-item text-primary">
+                            <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" href="./pages/presentation.html">Présentation</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" href="./pages/renovations.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary" aria-current="page" href="./pages/contact.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </div>
-        <!-- Content -->
-        <div class="container p-2">
-            <div class="d-flex justify-content-center align-middle-text gap-2">
-                <div class="col-5 justify-content-center pt-5" data-aos="fade-right">
-                    <h1>Nous travaillons pour que vos rêves deviennent realité</h1>
-                </div>
-                <div class="col-5" data-aos="fade-left">
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <h2 class="card-text">Nous sommes prêts pour vous aider avec les travaux dont vous avez
-                                besoin, dedans et
-                                dehors.
-                            </h2>
-                            <a href="#" class="btn btn-primary">Contactez-nous!</a>
+            </div>
+        </nav>
+    </div>
+    <!-- Content -->
+    <div class="container border border-primary mx-auto py-4">
+        <div class="container justify-content-center row mx-auto">
+            <div class="col-md-5 text-primary align-self-center mx-auto" data-aos="slide-right"
+                data-aos-duration="1000">
+                <p class="h1">Nous travaillons pour que vos rêves deviennent realité</p>
+            </div>
+            <div class="col-md-6 mx-auto" data-aos="slide-left" data-aos-duration="1200">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text h2">Nous sommes prêts pour vous aider avec les travaux dont vous avez
+                            besoin, dedans et
+                            dehors.
+                        </p>
+                        <div class="">
+                            <a class="btn btn-primary btn-lg rounded-0 align-self-end"
+                                href="./pages/contact.html">Contactez-nous!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container d-flex py-5">
-            <div class="card border-primary col-6" data-aos="fade-up"><img src="/images/pexels-jeshootscom-834892.webp"
-                    alt=""></div>
-            <div class="container col-5 mt-5">
-                <div class="justify-se-center" data-aos="fade-up">
-                    <h2>Si vous avez un project de batimênt et vouz avez besoin des professionnels pour le
-                        concretiser, comptez avec nous!</h2>
-                    <h2>Nous réalisons tous les travaux de maçonnerie, carrelage,
-                        electricité, ainsi que des rénovations et touts les finissements</h2>
-
-                </div>
+        <div class="container justify-content-center row mx-auto mt-3">
+            <div class="col-md-6 align-self-center mx-auto" data-aos="slide-left" data-aos-duration="1400">
+                <img class="img-fluid border border-success shadow" src="/images/pexels-jeshootscom-834892.webp" alt="">
+            </div>
+            <div class="col-md-6 align-self-center  mx-auto" data-aos="slide-right" data-aos-duration="1600">
+                <p class="h2">Si vous avez un project de batimênt et vouz avez besoin des professionnels pour le
+                    concretiser, comptez sur nous!</p>
+                <p class="h2">Nous réalisons tous les travaux de maçonnerie, carrelage,
+                    electricité, ainsi que des rénovations et touts les finissements</p>
             </div>
         </div>
-        <!-- Footer -->
-        <div class="container text-center">
-            <div class="container p-1">
-                <p class="card-title"><i class="bi bi-c-circle"></i>A2F 2022 All rights reserved</p>
-            </div>
+    </div>
+    </div>
+    <!-- Footer -->
+    <div class="container text-center p-3">
+        <div class="container">
+            <p class="card-title"><i class="bi bi-c-circle"></i>A2F 2022 All rights reserved</p>
         </div>
-    </main>
+    </div>
     <!-- Bootstrap JS -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- AOS JS -->
