--- a/pages/services.html
+++ b/pages/services.html
@@ -9,7 +9,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=tanker@400&f[]=supreme@400,401,300,500,700&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/scss/bootstrap.scss">
+    <link rel="stylesheet" href="../node_modules/bootstrap/scss/bootstrap.scss">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Bootstrap Icons -->
@@ -45,11 +45,11 @@
                                 <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" aria-current="page"
+                                <a class="btn btn-outline-primary active" aria-current="page"
                                     href="./services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" href="/contact.html">Contact</a>
+                                <a class="btn btn-primary" href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -70,7 +70,7 @@
     </main>
 
     <!-- Bootstrap JS -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- AOS JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
