--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=tanker@400&f[]=supreme@400,401,300,500,700&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/scss/bootstrap.scss">
+    <link rel="stylesheet" href="../node_modules/bootstrap/scss/bootstrap.scss">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Bootstrap Icons -->
@@ -19,52 +19,101 @@
     <title>A2F Services</title>
 </head>
 
-<body>
-    <main class="container-fluid bg-dark bg-gradient text-primary">
-        <!-- Navbar -->
-        <div class="container-fluid header py-2 px-5">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid py-3 px-5 mx-2 gap-4">
-                    <h1 class="fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
-                    <h4>Rénovations Carrelage Maçonnerie Electricité</h4>
-                    <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav gap-3">
-                            <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./renovations.html">Rénovations</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./services.html">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-primary" aria-current="page" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
+<body class="container bg-dark bg-gradient text-primary" style="height: 100vh;">
+    <!-- Navbar -->
+    <div class="container header mt-2">
+        <nav class=" navbar navbar-expand-lg">
+            <div class="container gap-3">
+                <h1 class=" fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
+                <h4>Maçonnerie Carrelage Electricité</h4>
+                <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav gap-3">
+                        <li class="nav-item text-primary">
+                            <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" href="./renovations.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary" aria-current="page" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <!-- Content -->
+    <div class="container border border-primary mx-auto p-5">
+        <div class="container justify-content-center row mx-auto">
+            <div class="col-md-5 text-primary align-self-center mx-auto shadow bg-dark" data-aos="slide-right"
+                data-aos-duration="1000">
+                <form class="py-5">
+                    <div class="row mb-3">
+                        <label for="name" class="col-sm-2 col-form-label">nom</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control border-primary" id="name">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label for="surname" class="col-sm-2 col-form-label">prénom</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control border-primary" id="surname" required>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label for="email" class="col-sm-2 col-form-label">email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control border-primary" id="email" required>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="validationTextarea" class="form-label">message</label>
+                        <textarea class="form-control border-primary" id="validationTextarea" required></textarea>
+                        <div class="invalid-feedback">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg rounded-0">envoyer</button>
+                </form>
+            </div>
+            <div class="col-md-6 align-self-center">
+                <div class="col mx-auto" data-aos="slide-left" data-aos-duration="1200">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <p class="card-text h2"> 42120 Le Coteau, France
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </nav>
-        </div>
-        <!-- Footer -->
-        <div class="container text-center">
-            <div class="container p-1">
-                <p class="card-title"><i class="bi bi-c-circle"></i>A2F 2022 All rights reserved</p>
+                <div class="col mx-auto" data-aos="slide-left" data-aos-duration="1200">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <p class="card-text h2">a2f@a2f.fr
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </main>
+    </div>
+    <!-- Footer -->
+    <div class="container text-center">
+        <div class="container p-3">
+            <p class="card-title"><i class="bi bi-c-circle"></i>A2F 2022 All rights reserved</p>
+        </div>
+    </div>
+
 
     <!-- Bootstrap JS -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- AOS JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
