--- a/pages/renovations.html
+++ b/pages/renovations.html
@@ -9,7 +9,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=tanker@400&f[]=supreme@400,401,300,500,700&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/scss/bootstrap.scss">
+    <link rel="stylesheet" href="../node_modules/bootstrap/scss/bootstrap.scss">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Bootstrap Icons -->
@@ -19,47 +19,42 @@
     <title>A2F Renovations</title>
 </head>
 
-<body>
-    <main class="container-fluid bg-dark bg-gradient text-primary">
-        <!-- Navbar -->
-        <div class="container-fluid header py-2 px-5" data-aos="fade-down">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid py-3 px-5 mx-2 gap-4">
-                    <h1 class="fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
-                    <h4>Rénovations Carrelage Maçonnerie Electricité</h4>
-                    <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav gap-3">
-                            <li class="nav-item text-primary">
-                                <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./presentation.html">Présentation</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" aria-current="page"
-                                    href="./renovations.html">Rénovations</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-outline-primary" href="./services.html">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="btn btn-primary" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+<body class="container bg-dark bg-gradient text-primary">
+    <!-- Navbar -->
+    <div class="container header mt-2">
+        <nav class=" navbar navbar-expand-lg">
+            <div class="container gap-3">
+                <h1 class=" fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
+                <h4>Maçonnerie Carrelage Electricité</h4>
+                <button class="navbar-toggler btn btn-primary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav gap-3">
+                        <li class="nav-item text-primary">
+                            <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" href="presentation.html">Présentation</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary" href="renovations.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary" aria-current="page" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-
-
-        </div>
-        <!-- Carrousel section -->
-        <div class="container">
+            </div>
+        </nav>
+    </div>
+    </header>
+    <!-- Carrousel section -->
+    <div class="container border border-primary">
+        <div class="container col-6 py-3">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -69,38 +64,17 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner">
-                    <div class=" carousel-item active">
+                <div class="carousel-inner border border-primary" data-aos="slide-up" data-aos-duration="1200">
+                    <div class="carousel-item active">
+                        <img src="/images/pexels-rene-asmussen-3990359.jpg" class=" d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
                         <img src="/images/a2f/builder-puts-the-tiles-on-the-floor-the-repair.jpg" class="d-block w-100"
                             alt="...">
-                        <div class="carousel-caption d-none d-md-block text-dark">
-                            <h5>Carrelage</h5>
-                            <p>Soit de faïence, au sol ou mural, nos professionels ont l'experience et
-                                l'expertise
-                                pour
-                                installer, changer ou réparer votre carrelage de choix.</p>
-                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/a2f/worker-processing-floor-with-bright-laminated-flooring-boards.jpg"
-                            class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block text-dark">
-                            <h5>Carrelage</h5>
-                            <p>Soit de faïence, au sol ou mural, nos professionels ont l'experience et
-                                l'expertise
-                                pour
-                                installer, changer ou réparer votre carrelage de choix.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="/images/pexels-rene-asmussen-3990359.jpg" class=" d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block text-dark">
-                            <h5>Carrelage</h5>
-                            <p>Soit de faïence, au sol ou mural, nos professionels ont l'experience et
-                                l'expertise
-                                pour
-                                installer, changer ou réparer votre carrelage de choix.</p>
-                        </div>
+                        <img src="/images/a2f/hands-electrician-installing-electrical-outlet-new-house-assembly-electrical-network-room-installation-electrical-network.jpg"
+                            class="d-block w-100" alt="..." style="overflow: hidden;">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -115,16 +89,40 @@
                 </button>
             </div>
         </div>
-        <!-- Footer -->
-        <div class="container text-center">
-            <div class="container p-1">
-                <p class="card-title"><i class="bi bi-c-circle"></i>A2F 2022 All rights reserved</p>
+        <div class="container mx-auto row justify-content-center">
+            <div class="container row justify-content-center p-5 gap-5">
+                <div class="card p-2 col-md-3 col-sm-4">
+                    <p class="h3">Maçonnerie</p>
+                    <p>On pose les murs dont vous avez besoin, soit dans un nouveau bâtiment, un nouveau mur
+                        pour votre jardin, ou une nouvelle pièce chez vous</p>
+                </div>
+                <div class="card p-2 col-md-3 col-sm-4">
+                    <p class="h3">Carrelage</p>
+                    <p>Soit de faïence, au sol ou mural, nos professionels ont l'experience et
+                        l'expertise
+                        pour
+                        installer, changer ou réparer votre carrelage de choix.</p>
+                </div>
+
+                <div class="card p-2 col-md-3 col-sm-4">
+                    <p class="h3">Electricité</p>
+                    <p>L'installation de la structure d'electricité neuve c'est aussi à nous, ainsi que les
+                        remplacements des installations existants</p>
+                </div>
             </div>
+
         </div>
-    </main>
+    </div>
+    </div>
+    <!-- Footer -->
+    <div class="container text-center">
+        <div class="container p-3">
+            <p class="card-title"><i class="bi bi-c-circle"></i>A2F 2022 All rights reserved</p>
+        </div>
+    </div>
 
     <!-- Bootstrap JS -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- AOS JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
