Fix slide animation on renovations page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="container bg-dark bg-gradient text-primary">
     <!-- Navbar -->
     <div class="container header mt-2">
-        <nav class=" navbar navbar-expand-lg">
+        <nav class=" navbar navbar-expand-lg" data-aos="slide-down" data-aos-duration="1200">
             <div class="container gap-3">
                 <h1 class=" fw-bolder"><i class="bi bi-bricks"></i> A2F</h1>
                 <h4>Maçonnerie Carrelage Electricité</h4>
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav gap-3">
                         <li class="nav-item text-primary">
-                            <a class="btn btn-outline-primary" aria-current="page" href="../index.html">Accueil
+                            <a class="btn btn-outline-primary" aria-current="page" href="index.html">Accueil
                             </a>
                         </li>
                         <li class="nav-item">
@@ -75,7 +75,8 @@
         </div>
         <div class="container justify-content-center row mx-auto mt-3">
             <div class="col-md-6 align-self-center mx-auto" data-aos="slide-left" data-aos-duration="1400">
-                <img class="img-fluid border border-success shadow" src="/images/pexels-jeshootscom-834892.webp" alt="">
+                <img class="img-fluid border border-success shadow" src="./images/pexels-jeshootscom-834892.webp"
+                    alt="">
             </div>
             <div class="col-md-6 align-self-center  mx-auto" data-aos="slide-right" data-aos-duration="1600">
                 <p class="h2">Si vous avez un project de batimênt et vouz avez besoin des professionnels pour le
