--- a/pages/renovations.html
+++ b/pages/renovations.html
@@ -66,15 +66,17 @@
                 </div>
                 <div class="carousel-inner border border-primary" data-aos="slide-up" data-aos-duration="1200">
                     <div class="carousel-item active">
-                        <img src="/images/pexels-rene-asmussen-3990359.jpg" class=" d-block w-100" alt="...">
+                        <img src="../images/pexels-rene-asmussen-3990359.jpg" class=" d-block w-100"
+                            alt="renovation dedans">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/a2f/builder-puts-the-tiles-on-the-floor-the-repair.jpg" class="d-block w-100"
-                            alt="...">
+                        <img src="../images/a2f/builder-puts-the-tiles-on-the-floor-the-repair.jpg"
+                            class="d-block w-100" alt="pose de carrelage en bois">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/a2f/hands-electrician-installing-electrical-outlet-new-house-assembly-electrical-network-room-installation-electrical-network.jpg"
-                            class="d-block w-100" alt="..." style="overflow: hidden;">
+                        <img src="../images/a2f/hands-electrician-installing-electrical-outlet-new-house-assembly-electrical-network-room-installation-electrical-network.jpg"
+                            class="d-block w-100" alt="changement de l'installation electrique"
+                            style="overflow: hidden;">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -91,12 +93,12 @@
         </div>
         <div class="container mx-auto row justify-content-center">
             <div class="container row justify-content-center p-5 gap-5">
-                <div class="card p-2 col-md-3 col-sm-4">
+                <div class="card p-2 col-md-3 col-sm-4" data-aos="slide-right" data-aos-duration="1000">
                     <p class="h3">Maçonnerie</p>
                     <p>On pose les murs dont vous avez besoin, soit dans un nouveau bâtiment, un nouveau mur
                         pour votre jardin, ou une nouvelle pièce chez vous</p>
                 </div>
-                <div class="card p-2 col-md-3 col-sm-4">
+                <div class="card p-2 col-md-3 col-sm-4" data-aos="slide-down" data-aos-duration="1000">
                     <p class="h3">Carrelage</p>
                     <p>Soit de faïence, au sol ou mural, nos professionels ont l'experience et
                         l'expertise
@@ -104,7 +106,7 @@
                         installer, changer ou réparer votre carrelage de choix.</p>
                 </div>
 
-                <div class="card p-2 col-md-3 col-sm-4">
+                <div class="card p-2 col-md-3 col-sm-4" data-aos="slide-left" data-aos-duration="1000">
                     <p class="h3">Electricité</p>
                     <p>L'installation de la structure d'electricité neuve c'est aussi à nous, ainsi que les
                         remplacements des installations existants</p>
