--- a/pages/renovations.html
+++ b/pages/renovations.html
@@ -56,7 +56,7 @@
     </header>
     <!-- Carrousel section -->
     <div class="container border border-primary">
-        <div class="container col-6 py-3">
+        <div class="container col-sm-8 py-3">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -100,7 +100,7 @@
                     <p>On pose les murs dont vous avez besoin, soit dans un nouveau bâtiment, un nouveau mur
                         pour votre jardin, ou une nouvelle pièce chez vous</p>
                 </div>
-                <div class="card p-2 col-md-3 col-sm-4" data-aos="slide-down" data-aos-duration="1000">
+                <div class="card p-2 col-md-3 col-sm-4" data-aos="slide-up" data-aos-duration="1000">
                     <p class="h3">Carrelage</p>
                     <p>Soit de faïence, au sol ou mural, nos professionels ont l'experience et
                         l'expertise
